--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "d3": "^5.16.0",
+    "moment": "^2.25.3",
+    "moment-range": "^4.0.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-date-range": "^1.0.3",
+    "react-daterange-picker": "^2.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
